--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <h1>Testing</h1>
+    <h1>Science and Nature Quiz</h1>
 
     <!-- Bootstrap 5.3 script -->
     <script
