Add Font Awesome kit

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Font Awesome kit -->
+    <script
+      src="https://kit.fontawesome.com/a1ecf707e9.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- Javascript -->
     <script
       src="assets/js/script.js"
