Add and style footer with social media links

--- a/index.html
+++ b/index.html
@@ -39,8 +39,42 @@
     <!-- Custom css -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100" data-bs-spy="scroll">
     <h1>Science and Nature Quiz</h1>
+
+    <!-- Footer with social media links -->
+    <footer class="footer-container mt-auto">
+        <div class="footer-column">
+          <a
+                href="https://www.github.com/"
+                target="_blank"
+                rel="noopener"
+                aria-label="Visit our GitHub page (opens in a new tab)"
+              >
+                <i class="fa-brands fa-github"></i
+              ></a>
+        </div>
+        <div class="footer-column">
+          <a
+                href="https://uk.linkedin.com/"
+                target="_blank"
+                rel="noopener"
+                aria-label="Visit our LinkedIn page (opens in a new tab)"
+              >
+                <i class="fa-brands fa-linkedin"></i
+              ></a>
+        </div>
+        <div class="footer-column">
+          <a
+                href="https://www.x.com/"
+                target="_blank"
+                rel="noopener"
+                aria-label="Visit our X page (opens in a new tab)"
+              >
+                <i class="fa-brands fa-x-twitter"></i
+              ></a>
+        </div>
+      </footer>
 
     <!-- Bootstrap 5.3 script -->
     <script
@@ -56,8 +90,6 @@
     ></script>
 
     <!-- Javascript -->
-    <script
-      src="assets/js/script.js"
-    ></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
