Add auto refresh to success.html

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               >
                 Contact
               </button>
-              <form class="dropdown-menu dropdown-menu-end p-4" id="contact-dropdown" action="success.html" metho="GET">
+              <form class="dropdown-menu dropdown-menu-end p-4" id="contact-dropdown" action="success.html" method="GET">
                 <div class="mb-3">
                   <p id="contact-paragraph">
                     If you would like to contact us, please use the form below.
