--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     ><p id="instructions-paragraph">
                     <b>1.</b> You will be presented with one question and four
                     possible answers.<br />
-                    <b>2.</b> Select only one answer — once you click on an option, it
+                    <b>2.</b> Select only one answer — once you select an answer, it
                     will be locked in and automatically submitted.<br />
-                    <b>3.</b> You have 30 seconds to answer the question. If you do not
+                    <b>3.</b> You have 30 seconds to answer each question. If you do not
                     select an option within 30 seconds, the question will be
                     marked as unanswered.<br />
                     <b>4.</b> After submission, your choice will be recorded and you’ll
