--- a/success.html
+++ b/success.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="8; url=https://lyd-w.github.io/Science-and-Nature-Quiz/">
+    <!-- <meta http-equiv="refresh" content="8; url=https://lyd-w.github.io/Science-and-Nature-Quiz/"> -->
     <meta
       name="description"
       content="Science and Nature Quiz, a fun, enjoyable quiz to test and expand your knowledge!"
