--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                     marked as unanswered.<br />
                     <b>4.</b> After submission, your choice will be recorded and you’ll
                     move onto the next question.<br />
-                    <b>5.</b> At the end of the quiz you will see your final score.</a
-                  >
+                    <b>5.</b> At the end of the quiz you will see your final score.</p>
+                    </a>
                 </li>
               </ul>
             </div>
@@ -161,14 +161,14 @@
             <div id="player-setup">
                 <h2 class="text-center">Enter your username and select a difficulty to begin!</h2>
                 <form id="player-info">
-                    <label for="username" id="username">Username:</label>
+                    <label for="username" id="player-name">Username:</label>
                     <input type="text" name="username" id="username" class="btn" placeholder="David Attenborough" required>
                     <p class="text-center" id="select-difficulty">Select a difficulty:</p>
                     <div id="difficutly">
                         <!-- Button imported from Bootstrap-->
-                        <button data-difficulty="easy" class="btn btn-outline-secondary">Easy</button>
-                        <button data-difficulty="medium" class="btn btn-outline-secondary">Medium</button>
-                        <button data-difficulty="hard" class="btn btn-outline-secondary">Hard</button>
+                        <button id="easy-btn" data-difficulty="easy" class="btn btn-outline-secondary">Easy</button>
+                        <button id="medium-btn" data-difficulty="medium" class="btn btn-outline-secondary">Medium</button>
+                        <button id="hard-btn" data-difficulty="hard" class="btn btn-outline-secondary">Hard</button>
                     </div>
                     <div class="start-button">
                         <button type="submit" data-type="start" class="btn btn-outline-secondary">Start</button>
@@ -176,8 +176,36 @@
                 </form>
             </div>
         </div>
+    <!-- End of quiz setup section -->
+    <!-- Question section -->
+    <div id="question-section" class="hide">
+      <div id="scoreboard">
+        <p id="question-number">Question</p>
+        <div id="score-section">
+          <p>
+            <i class="fa-solid fa-check"></i><span><i class="fa-solid fa-xmark"></i></span>
+          </p>
+        </div>
+        <div id="results">
+          <i class="fa-solid fa-check"></i>: <span id="correct-answers">0</span>
+          <i class="fa-solid fa-xmark"></i>: <span id="incorrect-answers">0</span>
+        </div>
+        <div id="timer">
+          <i class="fa-solid fa-hourglass-half"></i>
+          <span id="seconds">30</span>
+        </div>
+      </div>
+      <div id="question">
+        <div id="answer-buttons" class="btn-grid">
+          <button type="button" class="btn btn-a">Answer 1</button>
+          <button type="button" class="btn btn-a">Answer 2</button>
+          <button type="button" class="btn btn-a">Answer 3</button>
+          <button type="button" class="btn btn-a">Answer 4</button>
+        </div>
+      </div>
+    </div>
     </main>
-
+    <!-- End of question section -->
     <!-- Footer with social media links -->
     <footer class="footer-container mt-auto">
       <div class="footer-column">
