--- a/index.html
+++ b/index.html
@@ -64,21 +64,27 @@
               >
                 Instructions
               </button>
-              <ul class="dropdown-menu dropdown-menu-end" id="instructions-dropdown">
+              <ul
+                class="dropdown-menu dropdown-menu-end"
+                id="instructions-dropdown"
+              >
                 <li>
                   <a class="dropdown-item" href="#"
                     ><p id="instructions-paragraph">
-                    <b>1.</b> You will be presented with one question and four
-                    possible answers.<br />
-                    <b>2.</b> Select only one answer — once you select an answer, it
-                    will be locked in and automatically submitted.<br />
-                    <b>3.</b> You have 30 seconds to answer each question. If you do not
-                    select an option within 30 seconds, the question will be
-                    marked as unanswered.<br />
-                    <b>4.</b> After submission, your choice will be recorded and you’ll
-                    move onto the next question.<br />
-                    <b>5.</b> At the end of the quiz you will see your final score.</p>
-                    </a>
+                      <b>1.</b> You will be presented with one question and four
+                      possible answers.<br />
+                      <b>2.</b> Select only one answer — once you select an
+                      answer, it will be locked in and automatically
+                      submitted.<br />
+                      <b>3.</b> You have 30 seconds to answer each question. If
+                      you do not select an option within 30 seconds, the
+                      question will be marked as unanswered.<br />
+                      <b>4.</b> After submission, your choice will be recorded
+                      and you’ll move onto the next question.<br />
+                      <b>5.</b> At the end of the quiz you will see your final
+                      score.
+                    </p>
+                  </a>
                 </li>
               </ul>
             </div>
@@ -94,7 +100,12 @@
               >
                 Contact
               </button>
-              <form class="dropdown-menu dropdown-menu-end p-4" id="contact-dropdown" action="success.html" method="GET">
+              <form
+                class="dropdown-menu dropdown-menu-end p-4"
+                id="contact-dropdown"
+                action="success.html"
+                method="GET"
+              >
                 <div class="mb-3">
                   <p id="contact-paragraph">
                     If you would like to contact us, please use the form below.
@@ -144,7 +155,11 @@
                   ></textarea>
                 </div>
                 <div class="container-fluid text-center">
-                  <button type="submit" class="btn custom-button-outline mb-3" id="send-button">
+                  <button
+                    type="submit"
+                    class="btn custom-button-outline mb-3"
+                    id="send-button"
+                  >
                     Send
                   </button>
                 </div>
@@ -155,57 +170,91 @@
       </div>
     </nav>
 
-    <!-- Quiz setup section -->
+    <!-- Quiz setup section --> <!--
     <main>
-        <div class="quiz-container text-center">
-            <div id="player-setup">
-                <h2 class="text-center">Enter your username and select a difficulty to begin!</h2>
-                <form id="player-info">
-                    <label for="username" id="player-name">Username:</label>
-                    <input type="text" name="username" id="username" class="btn" placeholder="David Attenborough" required>
-                    <p class="text-center" id="select-difficulty">Select a difficulty:</p>
-                    <div id="difficutly">
-                        <!-- Button imported from Bootstrap-->
-                        <button id="easy-btn" data-difficulty="easy" class="btn btn-outline-secondary">Easy</button>
-                        <button id="medium-btn" data-difficulty="medium" class="btn btn-outline-secondary">Medium</button>
-                        <button id="hard-btn" data-difficulty="hard" class="btn btn-outline-secondary">Hard</button>
-                    </div>
-                    <div class="start-button">
-                        <button type="submit" data-type="start" class="btn btn-outline-secondary">Start</button>
-                    </div>
-                </form>
+      <div class="quiz-container text-center">
+        <div id="player-setup">
+          <h2 class="text-center">
+            Enter your username and select a difficulty to begin!
+          </h2>
+          <form id="player-info">
+            <label for="username" id="player-name">Username:</label>
+            <input
+              type="text"
+              name="username"
+              id="username"
+              class="btn"
+              placeholder="David Attenborough"
+              required
+            />
+            <p class="text-center" id="select-difficulty">
+              Select a difficulty:
+            </p>
+            <div id="difficutly"> -->
+              <!-- Button imported from Bootstrap--> <!--
+              <button
+                id="easy-btn"
+                data-difficulty="easy"
+                class="btn btn-outline-secondary"
+              >
+                Easy
+              </button>
+              <button
+                id="medium-btn"
+                data-difficulty="medium"
+                class="btn btn-outline-secondary"
+              >
+                Medium
+              </button>
+              <button
+                id="hard-btn"
+                data-difficulty="hard"
+                class="btn btn-outline-secondary"
+              >
+                Hard
+              </button>
             </div>
+            <div class="start-button">
+              <button
+                type="submit"
+                data-type="start"
+                class="btn btn-outline-secondary"
+              >
+                Start
+              </button>
+            </div>
+          </form>
         </div>
-    <!-- End of quiz setup section -->
-    <!-- Question section -->
-    <div id="question-section" class="hide">
-      <div id="scoreboard">
-        <p id="question-number">Question</p>
-        <div id="score-section">
-          <p>
-            <i class="fa-solid fa-check"></i><span><i class="fa-solid fa-xmark"></i></span>
-          </p>
+      </div> -->
+      <!-- End of quiz setup section -->
+
+      <!-- Question section -->
+      <div id="question-section" class="hide text-center">
+        <div id="scoreboard">
+          <p id="question-number">Question</p>
+          <div id="current-score">
+            <i class="fa-solid fa-check"></i>:
+            <span id="correct-answers">0</span>
+            <i class="fa-solid fa-xmark"></i>:
+            <span id="incorrect-answers">0</span>
+          </div>
+          <div id="timer">
+            <i class="fa-solid fa-hourglass-half"></i>
+            <span id="seconds">30</span>
+          </div>
         </div>
-        <div id="results">
-          <i class="fa-solid fa-check"></i>: <span id="correct-answers">0</span>
-          <i class="fa-solid fa-xmark"></i>: <span id="incorrect-answers">0</span>
-        </div>
-        <div id="timer">
-          <i class="fa-solid fa-hourglass-half"></i>
-          <span id="seconds">30</span>
+        <div id="question">
+          <div id="answer-buttons">
+            <button id="answer1" type="button" class="btn btn-a">Answer 1</button>
+            <button id="answer2" type="button" class="btn btn-a">Answer 2</button>
+            <button id="answer3" type="button" class="btn btn-a">Answer 3</button>
+            <button id="answer4" type="button" class="btn btn-a">Answer 4</button>
+          </div>
         </div>
       </div>
-      <div id="question">
-        <div id="answer-buttons" class="btn-grid">
-          <button type="button" class="btn btn-a">Answer 1</button>
-          <button type="button" class="btn btn-a">Answer 2</button>
-          <button type="button" class="btn btn-a">Answer 3</button>
-          <button type="button" class="btn btn-a">Answer 4</button>
-        </div>
-      </div>
-    </div>
     </main>
     <!-- End of question section -->
+
     <!-- Footer with social media links -->
     <footer class="footer-container mt-auto">
       <div class="footer-column">
