Add results section

--- a/index.html
+++ b/index.html
@@ -227,6 +227,17 @@
         </div>
       </div> -->
       <!-- End of quiz setup section -->
+      
+      <!-- Results section -->
+    <div id="end-game" class="hide">
+      <p id="final-result"></p>
+      <p class="text-centre">Final Score:</p>
+      <h1 id="correct-answers">0</h1>
+      <button id="new-game-button" class="btn restart hover">
+        New Game
+      </button>
+    </div>
+    <!-- End of results section -->
 
       <!-- Question section -->
       <div id="question-section" class="hide text-center">
