--- a/index.html
+++ b/index.html
@@ -227,19 +227,8 @@
         </div>
       </div> -->
       <!-- End of quiz setup section -->
-      
-      <!-- Results section -->
-    <div id="end-game" class="hide">
-      <p id="final-result"></p>
-      <p class="text-centre">Final Score:</p>
-      <h1 id="correct-answers">0</h1>
-      <button id="new-game-button" class="btn restart hover">
-        New Game
-      </button>
-    </div>
-    <!-- End of results section -->
 
-      <!-- Question section -->
+      <!-- Question section --> <!--
       <div id="question-section" class="hide text-center">
         <div id="scoreboard">
           <p id="question-number">Question</p>
@@ -263,8 +252,19 @@
           </div>
         </div>
       </div>
-    </main>
+    </main> -->
     <!-- End of question section -->
+      
+      <!-- Results section -->
+    <div id="end-game" class="hide text-center">
+      <p id="final-result">
+      Your final score was:</p>
+      <h1 id="correct-answers">0</h1>
+      <button id="new-game-button" class="btn hover">
+        New Game
+      </button>
+    </div>
+    <!-- End of results section -->
 
     <!-- Footer with social media links -->
     <footer class="footer-container mt-auto">
