--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
       </div>
     </nav>
 
-    <!-- Quiz setup section --> <!--
+    <!-- Quiz setup section -->
+    <!--
     <main>
       <div class="quiz-container text-center">
         <div id="player-setup">
@@ -191,7 +192,8 @@
               Select a difficulty:
             </p>
             <div id="difficutly"> -->
-              <!-- Button imported from Bootstrap--> <!--
+    <!-- Button imported from Bootstrap-->
+    <!--
               <button
                 id="easy-btn"
                 data-difficulty="easy"
@@ -226,9 +228,9 @@
           </form>
         </div>
       </div> -->
-      <!-- End of quiz setup section -->
+    <!-- End of quiz setup section -->
 
-      <!-- Question section --> <!--
+    <!-- Question section -->
       <div id="question-section" class="hide text-center">
         <div id="scoreboard">
           <p id="question-number">Question</p>
@@ -252,17 +254,14 @@
           </div>
         </div>
       </div>
-    </main> -->
+    </main> 
     <!-- End of question section -->
-      
-      <!-- Results section -->
+
+    <!-- Results section -->
     <div id="end-game" class="hide text-center">
-      <p id="final-result">
-      Your final score was:</p>
+      <p id="final-result">Your final score was:</p>
       <h1 id="correct-answers">0</h1>
-      <button id="new-game-button" class="btn hover">
-        New Game
-      </button>
+      <button id="new-game-button" class="btn hover">New Game</button>
     </div>
     <!-- End of results section -->
 
