--- a/success.html
+++ b/success.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="8; url=https://lyd-w.github.io/Science-and-Nature-Quiz/">
+    <meta
+      http-equiv="refresh"
+      content="8; url=https://lyd-w.github.io/Science-and-Nature-Quiz/"
+    />
     <meta
       name="description"
       content="Science and Nature Quiz, a fun, enjoyable quiz to test and expand your knowledge!"
@@ -62,8 +65,11 @@
         <h2>Thank you</h2>
         <p id="success-paragraph">
           Your enquiry has been submitted successfully and is now being
-          processed.</p>
-        <p>You will be redirected to the home page shortly or use the button below.
+          processed.
+        </p>
+        <p>
+          You will be redirected to the home page shortly or use the button
+          below.
         </p>
         <a
           class="btn btn-primary"
