Create initial JS to fetch questions and answers, then rearrange answer order

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
               >
                 Contact
               </button>
+              <!-- Form modified from Beckminster Crest Project -->
               <form
                 class="dropdown-menu dropdown-menu-end p-4"
                 id="contact-dropdown"
@@ -140,9 +141,9 @@
                     required
                   >
                     <option value="" selected>Select your enquiry</option>
-                    <option value="early-prospectus">Feedback</option>
-                    <option value="lower-prospectus">Report an issue</option>
-                    <option value="upper-prospectus">General enquiry</option>
+                    <option value="feedback">Feedback</option>
+                    <option value="report-issue">Report an issue</option>
+                    <option value="general-enquiry">General enquiry</option>
                   </select>
                 </div>
                 <div class="mb-3">
@@ -196,21 +197,21 @@
               <button
                 id="easy-btn"
                 data-difficulty="easy"
-                class="btn btn-outline-secondary"
+                class="btn btn-difficulty"
               >
                 Easy
               </button>
               <button
                 id="medium-btn"
                 data-difficulty="medium"
-                class="btn btn-outline-secondary"
+                class="btn btn-difficulty"
               >
                 Medium
               </button>
               <button
                 id="hard-btn"
                 data-difficulty="hard"
-                class="btn btn-outline-secondary"
+                class="btn btn-difficulty"
               >
                 Hard
               </button>
