Fix catch error in script.js

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               Select a difficulty:
             </p>
             <div id="difficutly">
-    <!-- Button imported from Bootstrap-->
+              <!-- Button imported from Bootstrap-->
               <button
                 id="easy-btn"
                 data-difficulty="easy"
@@ -228,9 +228,9 @@
           </form>
         </div>
       </div>
-    <!-- End of quiz setup section -->
+      <!-- End of quiz setup section -->
 
-    <!-- Question section -->
+      <!-- Question section -->
       <div id="question-section" class="hide text-center">
         <div id="scoreboard">
           <p id="question-number">Question</p>
@@ -247,10 +247,18 @@
         </div>
         <div id="question">
           <div id="answer-buttons">
-            <button id="answer1" type="button" class="btn btn-a">Answer 1</button>
-            <button id="answer2" type="button" class="btn btn-a">Answer 2</button>
-            <button id="answer3" type="button" class="btn btn-a">Answer 3</button>
-            <button id="answer4" type="button" class="btn btn-a">Answer 4</button>
+            <button id="answer1" type="button" class="btn btn-a">
+              Answer 1
+            </button>
+            <button id="answer2" type="button" class="btn btn-a">
+              Answer 2
+            </button>
+            <button id="answer3" type="button" class="btn btn-a">
+              Answer 3
+            </button>
+            <button id="answer4" type="button" class="btn btn-a">
+              Answer 4
+            </button>
           </div>
         </div>
       </div>
