--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
       <!-- Question section -->
       <div id="question-section" class="hide text-center">
         <div id="scoreboard">
-          <p id="question-number">Question</p>
+          <p id="question-number"></p>
           <div id="current-score">
             <i class="fa-solid fa-check"></i>: 
             <span id="correct-answers">0</span>
