Add and style loader

--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
       </div>
       <!-- End of quiz setup section -->
 
+      <!-- Loader -->
+      <div id="loader" class="hide text-center">
+        <p id="loader-paragraph">Loading questions...</p>
+        <div id="loader-circle">
+        </div>
+      </div>
+
       <!-- Question section -->
       <div id="question-section" class="hide text-center">
         <div id="scoreboard">
