Display final score in results section and style

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <!-- Results section -->
     <div id="results-section" class="hide text-center">
       <p id="final-result">Your final score was:</p>
-      <h1 id="correct-answers">0</h1>
+      <h1 id="final-score">0</h1>
       <button id="new-game-button" class="btn hover">New Game</button>
     </div>
     <!-- End of results section -->
