Added visible countdown timer

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           </div>
           <div id="timer">
             <i class="fa-solid fa-hourglass-half"></i>
-            <span id="seconds">30</span>
+            <span id="seconds"></span>
           </div>
         </div>
         <div id="question">
