--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <div class="dropdown">
+            <div class="dropdown" data-bs-auto-close="outside">
               <button
                 type="button"
                 class="btn btn-secondary dropdown-toggle"
