Difficulty required message

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <p class="text-center" id="select-difficulty">
               Select a difficulty:
             </p>
-            <div id="difficutly">
+            <div id="difficulty">
               <!-- Button imported from Bootstrap-->
               <button
                 id="easy-btn"
