--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 id="instructions-dropdown"
               >
                 <li>
-                  <a class="dropdown-item" href="#"
+                  <div class="p-3"
                     ><p id="instructions-paragraph">
                       <b>1.</b> You will be presented with one question and four
                       possible answers.<br />
@@ -85,7 +85,7 @@
                       <b>5.</b> At the end of the quiz you will see your final
                       score.
                     </p>
-                  </a>
+                  </div>
                 </li>
               </ul>
             </div>
