Add and style retry button

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
       <p id="final-result">Your final score was:</p>
       <h1 id="final-score">0</h1>
       <button id="new-game-button" class="btn hover">New Game</button>
+      <button id="retry-button" class="btn hover">Retry</button>
     </div>
     <!-- End of results section -->
 
