Create high scores board

--- a/index.html
+++ b/index.html
@@ -278,6 +278,13 @@
       <h1 id="final-score">0</h1>
       <button id="new-game-button" class="btn hover">New Game</button>
       <button id="retry-button" class="btn hover">Retry</button>
+      <button 
+      id="highscores-button" 
+      class="btn hover">
+      High scores
+    </button>
+      <div id="highscores-list" class="hide">
+      </div>
     </div>
     <!-- End of results section -->
 
