Style high scores board

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
       id="highscores-button" 
       class="btn hover">
       High scores
+      <i id="highscores-icon" class="fa-solid fa-chevron-down ms-2"></i>
     </button>
       <div id="highscores-list" class="hide">
       </div>
