--- a/index.html
+++ b/index.html
@@ -338,5 +338,6 @@
 
     <!-- Javascript -->
     <script src="assets/js/script.js"></script>
+    <script src="redirector.js"></script>
   </body>
 </html>
