Add timer to error page and style question display

--- a/404.html
+++ b/404.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
+      http-equiv="refresh"
+      content="8; url=https://lyd-w.github.io/Science-and-Nature-Quiz/"
+    />
+    <meta
       name="description"
       content="Sorry, that page cannot be found!"
     />
