--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <!-- Question section -->
       <div id="question-section" class="hide text-center">
         <div id="scoreboard">
-          <p id="question-number"></p>
+          <h2 id="question-number"></h2>
           <div id="current-score">
             <i class="fa-solid fa-check"></i>: 
             <span id="correct-answers">0</span>
