--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 id="instructions-dropdown"
               >
                 <li>
-                  <div class="p-3"></div>
+                  <div class="p-3">
                     <p id="instructions-paragraph">
                       <b>1.</b> You will be presented with one question and four
                       possible answers.<br />
