--- a/404.html
+++ b/404.html
@@ -44,14 +44,14 @@
     <!-- Navigation imported from Bootstrap v5.3 -->
     <nav id="navbar" class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid justify-content-left">
-        <a class="navbar-brand">
+        <h1 class="navbar-brand">
           <img
             src="assets/images/logo.png"
             alt="Science and Nature Logo"
             class="logo"
             id="success-logo"
           >
-          Science and Nature Quiz</a
+          Science and Nature Quiz</h1
         >
       </div>
     </nav>
