--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     <!-- Navigation imported from Bootstrap v5.3 -->
     <nav id="navbar" class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid justify-content-center">
-        <a class="navbar-brand">
+        <h1 class="navbar-brand">
           <img
             src="assets/images/logo.png"
             alt="Science and Nature Logo"
             class="logo"
           >
-          Science and Nature Quiz</a
+          Science and Nature Quiz</h1
         >
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
