Style final score

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <!-- Results section -->
     <div id="results-section" class="hide text-center">
       <p id="final-result">Your final score was:</p>
-      <h1 id="final-score">0</h1>
+      <p id="final-score">0</p>
       <button id="new-game-button" class="btn hover">New Game</button>
       <button id="retry-button" class="btn hover">Retry</button>
       <button id="highscores-button" class="btn hover">
