Format with Prettier

--- a/404.html
+++ b/404.html
@@ -51,8 +51,8 @@
             class="logo"
             id="success-logo"
           >
-          Science and Nature Quiz</h1
-        >
+          Science and Nature Quiz
+        </h1>
       </div>
     </nav>
 
