--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             alt="Science and Nature Logo"
             class="logo"
           >
-          Science and Nature Quiz</h1
-        >
+          Science and Nature Quiz
+        </h1>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <div class="dropdown">
