Style success and 404 page h1

--- a/404.html
+++ b/404.html
@@ -42,14 +42,14 @@
   </head>
   <body class="d-flex flex-column min-vh-100" data-bs-target="#navbar">
     <!-- Navigation imported from Bootstrap v5.3 -->
-    <nav id="navbar" class="navbar navbar-expand-sm fixed-top">
-      <div class="container-fluid justify-content-left">
+    <nav id="navbar-plain" class="navbar navbar-expand-sm fixed-top">
+      <div class="container-fluid justify-content-center">
         <h1 class="navbar-brand">
           <img
             src="assets/images/logo.png"
             alt="Science and Nature Logo"
             class="logo"
-            id="success-logo"
+            id="logo"
           >
           Science and Nature Quiz
         </h1>
