Add and style h1 to quiz setup

--- a/404.html
+++ b/404.html
@@ -44,7 +44,7 @@
     <!-- Navigation imported from Bootstrap v5.3 -->
     <nav id="navbar-plain" class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid justify-content-center">
-        <h1 class="navbar-brand">
+        <div class="navbar-brand">
           <img
             src="assets/images/logo.png"
             alt="Science and Nature Logo"
@@ -52,7 +52,7 @@
             id="logo"
           >
           Science and Nature Quiz
-        </h1>
+        </div>
       </div>
     </nav>
 
