--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <!-- Navigation imported from Bootstrap v5.3 -->
     <nav id="navbar" class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid justify-content-center">
-        <h1 class="navbar-brand">
+        <div class="navbar-brand">
           <img
             src="assets/images/logo.png"
             alt="Science and Nature Logo"
             class="logo"
           >
           Science and Nature Quiz
-        </h1>
+        </div>
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <div class="dropdown">
@@ -176,6 +176,9 @@
     <main>
       <div class="quiz-container text-center">
         <div id="setup-section">
+          <h1 id="welcome">
+            Welcome to the <br>Science and Nature Quiz!
+          </h1>
           <h2 class="text-center">
             Enter your username and select a difficulty to begin!
           </h2>
