Style redirect messages

--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
     <main>
       <div class="error-container text-center">
         <h2>Sorry, that page cannot be found!</h2>
-        <p>
+        <p id="redirect-message">
           You will be redirected to the home page shortly or use the button
           below.
         </p>
