--- a/success.html
+++ b/success.html
@@ -68,7 +68,7 @@
           Your enquiry has been submitted successfully and is now being
           processed.
         </p>
-        <p>
+        <p id="redirect-message">
           You will be redirected to the home page shortly or use the button
           below.
         </p>
