Format with Prettier

--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
     <main>
       <div class="quiz-container text-center">
         <div id="setup-section">
-          <h1 id="welcome">
-            Welcome to the <br>Science and Nature Quiz!
-          </h1>
+          <h1 id="welcome">Welcome to the<br>Science and Nature Quiz!</h1>
           <h2 class="text-center">
             Enter your username and select a difficulty to begin!
           </h2>
