Minor code improvements

--- a/success.html
+++ b/success.html
@@ -33,6 +33,13 @@
       href="assets/favicon/favicon-16x16.png"
     >
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet">
+
     <!-- Bootstrap v5.3 link -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
@@ -63,7 +70,7 @@
     <!-- Submission message -->
     <main>
       <div class="submission-container text-center">
-        <h2>Thank you</h2>
+        <h1 class="success-title">Thank you</h1>
         <p id="success-paragraph">
           Your enquiry has been submitted successfully and is now being
           processed.
